{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 15,
  "lineage": "1da5bc33-3b73-ad34-48e2-4a803b4b7ed9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dse",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06b263d6ceff0b3dd",
            "arn": "arn:aws:ec2:us-east-1:357576205424:instance/i-0ca75cccf2660b1a3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 16,
            "cpu_threads_per_core": 2,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca75cccf2660b1a3",
            "instance_state": "running",
            "instance_type": "i3.8xlarge",
            "ipv6_address_count": 0,
            "key_name": "djoy",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a9d3751b6a1fef65",
            "private_dns": "ip-10-0-0-114.ec2.internal",
            "private_ip": "10.0.0.114",
            "public_ip": "34.227.105.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0300776be2b1d86bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0da30d33964d28fc7"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02477685c16f19463",
            "tags": {
              "Name": "stargate-mongo-node-0",
              "Owner": "david.joy@datastax.com",
              "PrincipalId": "AROAILNSYZWVJ65V3N5NA:david.joy@datastax.com"
            },
            "tenancy": "default",
            "volume_tags": {
              "Owner": "david.joy@datastax.com",
              "PrincipalId": "AROAILNSYZWVJ65V3N5NA:david.joy@datastax.com"
            },
            "vpc_security_group_ids": [
              "sg-0da30d33964d28fc7"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_ssh",
            "aws_subnet.stargate_subnet",
            "aws_vpc.stargate_vpc",
            "data.template_file.user_data"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "stargate_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357576205424:internet-gateway/igw-0ce9c7154f36124b8",
            "id": "igw-0ce9c7154f36124b8",
            "owner_id": "357576205424",
            "tags": {
              "Name": "stargate_igw"
            },
            "vpc_id": "vpc-00e482128ea7991ea"
          },
          "dependencies": [
            "aws_vpc.stargate_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "stargate_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b35b592bb6b4b380",
            "owner_id": "357576205424",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ce9c7154f36124b8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "stargate_rt"
            },
            "vpc_id": "vpc-00e482128ea7991ea"
          },
          "dependencies": [
            "aws_internet_gateway.stargate_igw",
            "aws_vpc.stargate_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-099a0c288c99bdd89",
            "route_table_id": "rtb-0b35b592bb6b4b380",
            "subnet_id": "subnet-02477685c16f19463"
          },
          "dependencies": [
            "aws_internet_gateway.stargate_igw",
            "aws_route_table.stargate_rt",
            "aws_subnet.stargate_subnet",
            "aws_vpc.stargate_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357576205424:security-group/sg-0da30d33964d28fc7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da30d33964d28fc7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_ssh",
            "name_prefix": "",
            "owner_id": "357576205424",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-00e482128ea7991ea"
          },
          "dependencies": [
            "aws_vpc.stargate_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "stargate_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357576205424:subnet/subnet-02477685c16f19463",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-02477685c16f19463",
            "map_public_ip_on_launch": false,
            "owner_id": "357576205424",
            "tags": {
              "Name": "stargate_subnet"
            },
            "vpc_id": "vpc-00e482128ea7991ea"
          },
          "dependencies": [
            "aws_vpc.stargate_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stargate_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357576205424:vpc/vpc-00e482128ea7991ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-069bac6e198f85834",
            "default_route_table_id": "rtb-0eb36cd803c5f40dd",
            "default_security_group_id": "sg-076ee257f7a51ade6",
            "dhcp_options_id": "dopt-5891193d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00e482128ea7991ea",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0eb36cd803c5f40dd",
            "owner_id": "357576205424",
            "tags": {
              "Name": "stargate_vpc"
            }
          }
        }
      ]
    }
  ]
}